--- a/blogtext/text3.html
+++ b/blogtext/text3.html
@@ -2,42 +2,26 @@
 <html>
 
 <head>
-
-    <title>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, Awful Blog</title>
+    <title></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="\styles.css">
     <style>
-        h1 {
-            color: gold;
-        }
-
-        .special {
-            color: gold;
-        }
-
-        /* h1,
+        h1,
         h2,
-        p,
-        iframe {
+        p {
             text-align: center;
-        } */
+        }
 
-        /* .navbg {
-            background-color: goldenrod;
-        } */
+        .maintext {
+            column-count: 1;
+        }
     </style>
-
 </head>
 
 <body>
-
     <container class="header">
-        <!-- <h1>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, <div class=special>Awful
-            </div> Blog! (Title Pending)</h1>
-        <h2>A Work In Progress</h2> -->
-        <!--*New Header*-->
         <div class="jumbotron jumbotron-fluid text-center mb-0">
             <div class="container">
                 <h1 class="display-4">Mike's Slightly Improved Blog</h1>
@@ -46,15 +30,6 @@
         </div>
     </container>
 
-    <!--<div class="navbg">
-        <nav>-->
-    <!-- <ul>
-                <li><span><strong>Home</strong></span></li>
-                <li><a href="posts.html"><strong>Posts</strong></a></li>
-                <li><a href="projects.html"><strong>Projects</strong></a></li>
-                <li><a href="links.html"><strong>Links</strong></a></li>
-            </ul> -->
-    <!--*New Navbar*-->
     <container class="nav pt-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-0">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -66,20 +41,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="\index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Go To:
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="posts.html">Posts</a>
+                            <a class="dropdown-item" href="\posts.html">Posts</a>
                             <br>
-                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <a class="dropdown-item" href="\projects.html">Projects</a>
                             <br>
-                            <a class="dropdown-item" href="links.html">Links</a>
+                            <a class="dropdown-item" href="\links.html">Links</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -88,37 +63,37 @@
                 </ul>
             </div>
         </nav>
-        <!--</nav>-->
         </div>
     </container>
-
     
-    <div class="p-3 mb-2 bg-danger text-white">
-        <h2>Welcome!</h2>
-    </div>
-    <!-- <h2>Welcome!</h2> -->
-
     <div class="main">
-
-    <div class="row">
-        <div class="col-5 text-center">
-            <br>
-            <p>This (awful) main page is mostly placeholder for now, until I think of something really clever to do with
-                it.
-                Until that time transpires, please enjoy the soothing, dulcet sounds of some <strong>MONGOLIAN
-                    METAL!</strong>
-        </div>
-        <div class="col-7 text-center">
-            <iframe width="500" height="300" src="https://www.youtube.com/embed/jM8dCGIm6yc" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            </p>
-
-        </div>
+        <br>
+    <div class="maintext">
+        <h2>Week Three</h2>
+        <br>
+        <p>So this week started out maybe more stressful than the first. Not sure
+            if it was something in the water or what, but from the end of last week,
+            it seemed as though any confidence had gone straight out of me. <br>
+            Thankfully, I was able to learn (all over again) that asking for help is
+            my best weapon through this process. I think that maybe my biggest
+            challenge is that I'm no longer used to pursuing things past the point of
+            being bad at them, and what I've experienced are the growing pains of
+            growing into that role of student again. Whatever things I've learned in
+            the last few years have mostly been simple and easy to get used to. Hard
+            things, as I'm relearning, are hard.<br>
+            The hard work is slowly starting to pay off, too. While it's still true
+            that I don't necessarily grasp everything on the first, or even second,
+            attempt, I do grasp more now than I did at the beginning, and I think I'm
+            starting to become used to the idea of experimenting around to find a workable
+            solution to my coding problems. Still, must always remind myself to seek
+            help when I'm driving myself mad. For this week, there are some who certainly
+            have earned a shout-out for their invaluable assistance (they know who they are!).<br>
+            So again I find myself in the position of saying that, having wanted to quit,
+            I'm once more glad that I did not. And not to sound too egomaniacal, but I'm
+            now looking forward to seeing what I can overcome next.
+        </p>
     </div>
-
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
