--- a/blogtext/text1.html
+++ b/blogtext/text1.html
@@ -2,42 +2,26 @@
 <html>
 
 <head>
-
-    <title>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, Awful Blog</title>
+    <title></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="\styles.css">
     <style>
-        h1 {
-            color: gold;
-        }
-
-        .special {
-            color: gold;
-        }
-
-        /* h1,
+        h1,
         h2,
-        p,
-        iframe {
+        p {
             text-align: center;
-        } */
+        }
 
-        /* .navbg {
-            background-color: goldenrod;
-        } */
+        .maintext {
+            column-count: 1;
+        }
     </style>
-
 </head>
 
 <body>
-
     <container class="header">
-        <!-- <h1>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, <div class=special>Awful
-            </div> Blog! (Title Pending)</h1>
-        <h2>A Work In Progress</h2> -->
-        <!--*New Header*-->
         <div class="jumbotron jumbotron-fluid text-center mb-0">
             <div class="container">
                 <h1 class="display-4">Mike's Slightly Improved Blog</h1>
@@ -46,15 +30,6 @@
         </div>
     </container>
 
-    <!--<div class="navbg">
-        <nav>-->
-    <!-- <ul>
-                <li><span><strong>Home</strong></span></li>
-                <li><a href="posts.html"><strong>Posts</strong></a></li>
-                <li><a href="projects.html"><strong>Projects</strong></a></li>
-                <li><a href="links.html"><strong>Links</strong></a></li>
-            </ul> -->
-    <!--*New Navbar*-->
     <container class="nav pt-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-0">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -66,20 +41,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="\index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Go To:
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="posts.html">Posts</a>
+                            <a class="dropdown-item" href="\posts.html">Posts</a>
                             <br>
-                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <a class="dropdown-item" href="\projects.html">Projects</a>
                             <br>
-                            <a class="dropdown-item" href="links.html">Links</a>
+                            <a class="dropdown-item" href="\links.html">Links</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -88,37 +63,35 @@
                 </ul>
             </div>
         </nav>
-        <!--</nav>-->
         </div>
     </container>
 
-    
-    <div class="p-3 mb-2 bg-danger text-white">
-        <h2>Welcome!</h2>
-    </div>
-    <!-- <h2>Welcome!</h2> -->
-
-    <div class="main">
-
-    <div class="row">
-        <div class="col-5 text-center">
-            <br>
-            <p>This (awful) main page is mostly placeholder for now, until I think of something really clever to do with
-                it.
-                Until that time transpires, please enjoy the soothing, dulcet sounds of some <strong>MONGOLIAN
-                    METAL!</strong>
-        </div>
-        <div class="col-7 text-center">
-            <iframe width="500" height="300" src="https://www.youtube.com/embed/jM8dCGIm6yc" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            </p>
-
-        </div>
-    </div>
-
-    </div>
-
+<div class="main">
+    <br>
+<div class="maintext">
+    <h2>Week One</h2>
+    <br>
+    <p>The struggle, as they say, is real. If I had to characterize my
+        experience in one word, it would be "stressful." I didn't know
+        what to expect, and generally try to avoid expectations in favor of
+        anticipation, but I was nonetheless thrown somewhat for a loop.<br>
+        That's not necessarily a bad thing, though. It means I've learned
+        the reality of what I'm in for, which means I can now set my
+        expectations accordingly. And this page should be evidence enough
+        that I managed to grasp some programming basics as well.<br>
+        The introductory materials did not disappoint in what they predicted.
+        I did want to quit, a couple different times. But now I'm glad I didn't.
+        The material wasn't as hard as I'd convinced myself it was. And
+        though my page will be far from complete, or even "nice" for that
+        matter, for demo, it is at least a beginning, and I am happy
+        enough with that for now.<br>
+        They say the scariest thing for artists and writers is a blank page.
+        I think the same thing is true for programming. Having now put pen
+        to paper, if you will, the hardest part is done. I look forward to
+        learning more, the better to build on this beginning.
+    </p>
+</div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
