--- a/blogtext/text4.html
+++ b/blogtext/text4.html
@@ -2,42 +2,26 @@
 <html>
 
 <head>
-
-    <title>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, Awful Blog</title>
+    <title></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="\styles.css">
     <style>
-        h1 {
-            color: gold;
-        }
-
-        .special {
-            color: gold;
-        }
-
-        /* h1,
+        h1,
         h2,
-        p,
-        iframe {
+        p {
             text-align: center;
-        } */
+        }
 
-        /* .navbg {
-            background-color: goldenrod;
-        } */
+        .maintext {
+            column-count: 1;
+        }
     </style>
-
 </head>
 
 <body>
-
     <container class="header">
-        <!-- <h1>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, <div class=special>Awful
-            </div> Blog! (Title Pending)</h1>
-        <h2>A Work In Progress</h2> -->
-        <!--*New Header*-->
         <div class="jumbotron jumbotron-fluid text-center mb-0">
             <div class="container">
                 <h1 class="display-4">Mike's Slightly Improved Blog</h1>
@@ -46,15 +30,6 @@
         </div>
     </container>
 
-    <!--<div class="navbg">
-        <nav>-->
-    <!-- <ul>
-                <li><span><strong>Home</strong></span></li>
-                <li><a href="posts.html"><strong>Posts</strong></a></li>
-                <li><a href="projects.html"><strong>Projects</strong></a></li>
-                <li><a href="links.html"><strong>Links</strong></a></li>
-            </ul> -->
-    <!--*New Navbar*-->
     <container class="nav pt-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-0">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -66,20 +41,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="\index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Go To:
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="posts.html">Posts</a>
+                            <a class="dropdown-item" href="\posts.html">Posts</a>
                             <br>
-                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <a class="dropdown-item" href="\projects.html">Projects</a>
                             <br>
-                            <a class="dropdown-item" href="links.html">Links</a>
+                            <a class="dropdown-item" href="\links.html">Links</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -88,37 +63,40 @@
                 </ul>
             </div>
         </nav>
-        <!--</nav>-->
         </div>
     </container>
-
     
-    <div class="p-3 mb-2 bg-danger text-white">
-        <h2>Welcome!</h2>
-    </div>
-    <!-- <h2>Welcome!</h2> -->
 
     <div class="main">
-
-    <div class="row">
-        <div class="col-5 text-center">
-            <br>
-            <p>This (awful) main page is mostly placeholder for now, until I think of something really clever to do with
-                it.
-                Until that time transpires, please enjoy the soothing, dulcet sounds of some <strong>MONGOLIAN
-                    METAL!</strong>
-        </div>
-        <div class="col-7 text-center">
-            <iframe width="500" height="300" src="https://www.youtube.com/embed/jM8dCGIm6yc" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            </p>
-
-        </div>
+        <br>
+    <div class="maintext">
+        <h2>Week Four</h2>
+        <br>
+        <p>This has been a much better week. After a rocky start on Monday,
+            I rediscovered the benefits of actually being on-site, and the
+            immediacy of assistance. It's probably not exaggerating by much
+            at all to suggest that I may not have completed my projects this
+            week if I had not left the house. Thankfully, it seems to be finally
+            sinking in for me that help is not only available, but is desirable
+            to seek out.<br>
+            Now that my work and support habits/needs are more in order, it's a
+            deal easier to have a little fun. I still find javascript to be a
+            bit of a pain, but I suppose that's to be expected when learning
+            a new language in tandem with a new way to structure one's
+            thinking. It being a pain does not, however, suggest that I'm not
+            starting to get it; while, starting out, it was easy enough to
+            identify an individual expression, now it's getting easier to identify
+            what the expression is <em>saying</em>. And not to beat a dead horse,
+            but I would probably not be where I am without help (which I reiterate
+            mostly for my own benefit). <br>
+            I'm happy to say that I have very few misgivings about going forward
+            into full-time. I eagerly anticipate a larger one-to-one environment,
+            with lots of people to bounce ideas off of and generally collaborate
+            with. <br>
+            See you next week!
+        </p>
     </div>
-
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
