--- a/blogtext/text5.html
+++ b/blogtext/text5.html
@@ -2,42 +2,26 @@
 <html>
 
 <head>
-
-    <title>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, Awful Blog</title>
+    <title></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="\styles.css">
     <style>
-        h1 {
-            color: gold;
-        }
-
-        .special {
-            color: gold;
-        }
-
-        /* h1,
+        h1,
         h2,
-        p,
-        iframe {
+        p {
             text-align: center;
-        } */
+        }
 
-        /* .navbg {
-            background-color: goldenrod;
-        } */
+        .maintext {
+            column-count: 1;
+        }
     </style>
-
 </head>
 
 <body>
-
     <container class="header">
-        <!-- <h1>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, <div class=special>Awful
-            </div> Blog! (Title Pending)</h1>
-        <h2>A Work In Progress</h2> -->
-        <!--*New Header*-->
         <div class="jumbotron jumbotron-fluid text-center mb-0">
             <div class="container">
                 <h1 class="display-4">Mike's Slightly Improved Blog</h1>
@@ -46,15 +30,6 @@
         </div>
     </container>
 
-    <!--<div class="navbg">
-        <nav>-->
-    <!-- <ul>
-                <li><span><strong>Home</strong></span></li>
-                <li><a href="posts.html"><strong>Posts</strong></a></li>
-                <li><a href="projects.html"><strong>Projects</strong></a></li>
-                <li><a href="links.html"><strong>Links</strong></a></li>
-            </ul> -->
-    <!--*New Navbar*-->
     <container class="nav pt-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-0">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -66,20 +41,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="\index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Go To:
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="posts.html">Posts</a>
+                            <a class="dropdown-item" href="\posts.html">Posts</a>
                             <br>
-                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <a class="dropdown-item" href="\projects.html">Projects</a>
                             <br>
-                            <a class="dropdown-item" href="links.html">Links</a>
+                            <a class="dropdown-item" href="\links.html">Links</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -88,37 +63,39 @@
                 </ul>
             </div>
         </nav>
-        <!--</nav>-->
         </div>
     </container>
-
     
-    <div class="p-3 mb-2 bg-danger text-white">
-        <h2>Welcome!</h2>
-    </div>
-    <!-- <h2>Welcome!</h2> -->
-
     <div class="main">
-
-    <div class="row">
-        <div class="col-5 text-center">
-            <br>
-            <p>This (awful) main page is mostly placeholder for now, until I think of something really clever to do with
-                it.
-                Until that time transpires, please enjoy the soothing, dulcet sounds of some <strong>MONGOLIAN
-                    METAL!</strong>
-        </div>
-        <div class="col-7 text-center">
-            <iframe width="500" height="300" src="https://www.youtube.com/embed/jM8dCGIm6yc" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            </p>
-
-        </div>
+        <br>
+    <div class="maintext">
+        <h2>Week Five (Full-Time Week One)</h2>
+        <br>
+        <p>The setting makes the difference. I know I've already said it, but the
+            whole work-from-home deal was just not doing it for me. Actually being
+            in the office, and now actually having a bunch of people around as well,
+            is a game-changer. And as I get more comfortable with everyone, everything
+            else seems to be flowing that much smoother.<br>
+            That's not to say things haven't still been challenging, because they have.
+            The weight of the challenge, however, is slowly becoming subsumed by the
+            enjoyment of figuring something out and applying it. Case in point: this week's
+            projects provided a nice mix of creative and logical challenges that overlapped
+            well, and the local network of support made solving the various problems that
+            arose a deal less arduous. Though it was always clear that I should reach out
+            for help if I needed it, I didn't always feel right about seeking guidance.<br>
+            Weirdly, being in-person seems to have taken the ego out of it for me. Id've
+            thought the reverse. <br>
+            I can't go without mentioning the session in the park with Dr. Luke, which was
+            a very positive experience. Having the words to describe my goals in showing
+            up every day makes the hard parts a little easier to put up with. Rather than
+            laboring in the service of some vague potential that's "over there," I now have
+            something more solid to latch onto. <br>
+            I think that about does it for now. I'm looking forward to converting this blog
+            over to bootstrap, and generally getting my hands dirty elsewhere. <br>
+            Until next time.
+        </p>
     </div>
-
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
