--- a/links.html
+++ b/links.html
@@ -5,13 +5,14 @@
 <head>
     <title>Mike's Hyperbolically Awful Links</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <style>
-        .special {color: red;}
+        /* .special {color: red;} */
         h1, h2, h3, p {text-align: center;}
-        .navbg {
+        /* .navbg {
             background-color: goldenrod;
-        }
+        } */
         .maintext {
             column-count: 1;
         }
@@ -20,10 +21,19 @@
 
 <body>
 
-    <h1>Mike's Hyperbolically <div class="special">Awful</div> Links</h1>
-    <h2>Where Are We Going?  Somewhere Horrible.</h2>
+    <container class="header">
+        <div class="jumbotron jumbotron-fluid text-center mb-0">
+            <div class="container">
+                <h1 class="display-4">Mike's Slightly Improved Blog</h1>
+                <p class="lead special">"Now with less Awfulness"</p>
+            </div>
+        </div>
+    </container>
 
-    <div class="navbg">
+    <!-- <h1>Mike's Hyperbolically <div class="special">Awful</div> Links</h1>
+    <h2>Where Are We Going?  Somewhere Horrible.</h2> -->
+
+    <!-- <div class="navbg">
     <nav>
         <ul>
             <li><span><a href="index.html"><strong>Home</strong></a></span></li>
@@ -32,9 +42,47 @@
             <li><strong>Links</strong></li>
         </ul>    
     </nav> 
-    </div>
+    </div> -->
 
-    <main>
+    <container class="nav pt-0">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-0">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Go To:
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="posts.html">Posts</a>
+                            <br>
+                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <br>
+                            <a class="dropdown-item" href="links.html">Links</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://sovereignstudio.wordpress.com/">Art!</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!--</nav>-->
+        </div>
+    </container>
+
+
+    <div class="main">
         <div class="maintext">
         <h3>Find me at these fine places:</h3> 
         <ul>
@@ -44,8 +92,11 @@
             <li><a href="https://sovereignstudio.wordpress.com/">Sovereign Studio</a> (art!)</li>
         </ul>
         </div>
-    </main>
+    </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 
 </html>
